mile_train.ipynb

--- a/mile_train.ipynb
+++ b/mile_train.ipynb
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "data = {\n",
-    "    'Vehicle': ['Car A', 'Car B', 'Car C', 'Truck A', 'Truck B', 'Car D', 'Car E', 'Car F', 'Truck C', 'Truck D'],\n",
+    "    'Vehicle': ['Maruthi_Swift', 'Toyota_Innova', 'Skoda', 'Bharat_Benz', 'Tata', 'Bolero', 'Thar', 'Scarpio', 'KTM', 'Honda_Unicorn'],\n",
     "    'Engine_Size': [2000, 2500, 1800, 3500, 4500, 1600, 2200, 3000, 4000, 5000],\n",
     "    'Horsepower': [180, 220, 160, 280, 350, 130, 200, 250, 320, 400],\n",
     "    'Torque': [250, 300, 220, 450, 600, 180, 270, 350, 500, 700],\n",
